# ex_af

./: .gitignore  LICENSE  README.md  mix.exs
.github/workflows/: ci.yml  elixir.yml  rust.yml
config/: dev.exs  test.exs
lib/: ex_af.ex
lib/ex_af/: backend.ex  helpers.ex  native.ex
native/exaf_native/: Cargo.toml  README.md
native/exaf_native/src/: array.rs  datatypes.rs  lib.rs
test/: ex_af_test.exs  test_helper.exs
test/ex_af/: nx_doctest_test.exs  nx_linalg_doctest_test.exs  nx_test.exs
test/support/: exaf_case.ex
