[package]
name = "exaf_native"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "exaf_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.25.0"
# arrayfire = "3.8"
arrayfire = { git = "https://github.com/Benjamin-Philip/arrayfire-rust", branch = "bp-fix-f16-implicitpromoting" }
half = "1.8.2"
num-complex = "0.4.0"
